Almost finished version of notes page.

--- a/PaperNotesAndRecomendationsWeb/src/main/js/app/brko/demo/styles/Demo.scss
+++ b/PaperNotesAndRecomendationsWeb/src/main/js/app/brko/demo/styles/Demo.scss
@@ -2,7 +2,7 @@
  * Created by ppetrov on 10/14/2016.
  */
 
-@import "../../assets/styles/Global.scss";
+@import "../../assets/styles/Global";
 
 .demo-module {
   .icon-button {
