Make to look much more good then previusluy.

--- a/PaperNotesAndRecomendationsWeb/src/main/js/app/brko/moduls/notes/notes.scss
+++ b/PaperNotesAndRecomendationsWeb/src/main/js/app/brko/moduls/notes/notes.scss
@@ -1,3 +1,29 @@
+
 .notes-container {
   margin-top: 50px;
+}
+
+.note-card {
+  margin-bottom: 20px;
+}
+
+.action-button{
+  margin-right: 20px;
+}
+
+.shared-from {
+  font-style: italic;
+  width: 120%;
+  padding-right: 30px;
+  background: #4abdac;
+}
+
+.notes-form {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  width: 400px;
+
+  .save-note-button {
+    float:right;
+  }
 }
